--- a/ui/admin/package.json
+++ b/ui/admin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ruoyi-vue-plus",
   "version": "5.1.2",
-  "description": "RuoYi-Vue-Plus多租户管理系统",
+  "description": "管理系统",
   "author": "LionLi",
   "license": "MIT",
   "scripts": {
