feat: 修构建调整

--- a/docker/redis/Dockerfile
+++ b/docker/redis/Dockerfile
@@ -5,7 +5,6 @@ ENV LC_ALL=C.UTF-8
 # 挂载目录
 VOLUME /home/redis
 # 创建目录
-RUN mkdir -p /home/redis
-RUN mkdir -p /home/redis/data && chmod 777 /home/redis/data
+RUN mkdir -p /home/redis && mkdir -p /home/redis/data && chmod 777 /home/redis/data
 # 指定路径
 WORKDIR /home/redis
