--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
         --spring.datasource.dynamic.datasource.master.url=jdbc:mysql://ry-mysql:3306/ry_kt?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
         --spring.datasource.dynamic.datasource.master.username=zipper
         --spring.datasource.dynamic.datasource.master.password=zzp@949389
+        --profile=prod
     volumes:
       - ./logs:/app/logs:rw
     depends_on:
