--- a/docker/redis/conf/redis.conf
+++ b/docker/redis/conf/redis.conf
@@ -1,5 +1,5 @@
 # redis 密码
-requirepass ruoyi123
+requirepass U2FsdGVkX1/wUdWN3o5+S0MC8CRgX81e/XO1GLblps4=
 
 # key 监听器配置
 # notify-keyspace-events Ex
